--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Adam Hutchison's Dot Files
+= Spencer Roan's Dot Files
 
 These are config files to set up a system the way I like it. They are heavily
 inspired by Ryan Bates' Dot Files (http://github.com/ryanb/dotfiles)
